--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <sonar.language>java</sonar.language>
+    <sonar.host.url>http://10.0.6.165:9000</sonar.host.url>
   </properties>
 
   <dependencies>
